--- a/package.json
+++ b/package.json
@@ -27,20 +27,31 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/serve-static": "^4.0.0",
+    "app-root-path": "^3.1.0",
     "bcrypt": "^5.1.1",
+    "date-fns": "^2.30.0",
+    "fs-extra": "^11.1.1",
     "mongoose": "^7.5.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "sharp": "^0.32.6",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/app-root-path": "^1.2.6",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
+    "@types/fs-extra": "^11.0.2",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.8",
     "@types/node": "^20.3.1",
+    "@types/sharp": "^0.32.0",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^9.0.4",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
