--- a/package.json
+++ b/package.json
@@ -32,11 +32,14 @@
     "bcrypt": "^5.1.1",
     "date-fns": "^2.30.0",
     "fs-extra": "^11.1.1",
+    "i": "^0.3.7",
     "mongoose": "^7.5.0",
+    "npm": "^10.2.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "sharp": "^0.32.6",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "yookassa-ts": "^0.1.14"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
