--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 MONGODB_URI=mongodb+srv://dimiigoshev:upoqS4962ZWyWsbn@cluster1.edutvy5.mongodb.net/darilla?retryWrites=true&w=majority
-FE_URL=darilla.vercel.app
+FE_URL=https://darilla.vercel.app
